# TwoTowerPT

./: .gitignore  pyproject.toml
src/: datasets.py  evaluate.py  main.py
